--- a/example/index.html
+++ b/example/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+    <meta charset="utf-8">
+    <title>Canvas</title>
+    <link rel="stylesheet" href="style.css">
+</head>    
 <body>
     <h1>Hello, World</h1>
 </body>
